did first resturant info box, started second

--- a/Dining.html
+++ b/Dining.html
@@ -25,6 +25,36 @@
         </div>
     </header>
 
+    <main>
+        <section>
+            <h1>A Culinary Journey</h1>
+            <p>Induldge in a diverse range of dining experiences at Shangri-La Beach Resort. From elegant fine dining to casual beachfront bites, our restaurants and bars offer something to tantalize every taste bud and create unforgettable culinary moments. </p>
+       
+            <div class="features">
+                <div class="features-box">
+
+                    <h3>The Beach House - Fine Dining with Ocean Views</h3>
+
+                    <p>Experience the epitome of culinary excellence at The Beach House. Our signature restaurant offers breathtaking panoramic ocean views, creating a romantic and sophisticated ambiance. Our talented chefs craft exquisite dishes using the freshest locally-sourced seafood and premium international ingredients. Indulge in innovative flavor combinations and impeccable service for a truly memorable fine dining experience. The Beach House is perfect for special occasions or a luxurious evening out.</p>
+                <p><strong>Cuisine:</strong> Fine Dining, Seafood, International</p>
+                <p><strong>Ambiance:</strong> Elegant, Romantic, Oceanfront</p>
+                <p><strong>Dress Code:</strong> Smart Casual</p>
+                <p><strong>Reservations:</strong> Recommeded</p>
+
+                </div>
+
+                <div class="feature-box">
+
+                    <h3>The Sand Bar - Relaxed Beachfront Grill</h3>
+                </div>
+
+
+
+            
+            </div> 
+        </section>
+    </main>
+
 
 
     <footer>
