did the rest of the resturant info, just finishing "other dining options"

--- a/Dining.html
+++ b/Dining.html
@@ -46,9 +46,38 @@
                 <div class="feature-box">
 
                     <h3>The Sand Bar - Relaxed Beachfront Grill</h3>
+
+                    <p>For a more casual and laid-back dining experience, head to The Sand Bar. Situated right on the beach, this vibrant grill offers a relaxed atmosphere where you can enjoy delicious food with your toes in the sand. Savor grilled specialties, fresh salads, and satisfying sandwiches, all while soaking in the sun and enjoying the ocean breeze. The Sand Bar is the perfect spot for a casual lunch, a refreshing afternoon snack, or a relaxed dinner under the stars.</p>
+                    <p><strong>Cuisine:</strong> Casual, Grill, Seafood, American</p>
+                    <p><strong>Ambiance:</strong> Relaxed, Beachfront, Informal</p>
+                    <p><strong>Dress Code:</strong> Casual</p>
+                    <p><strong>Reservations:</strong> No Reservations Required</p>
+
+
                 </div>
 
+            <div class="feature-box">
 
+                <h3>The Poolside Cafe - Refreshments and Light Bites</h3>
+
+                <p>Stay refreshed and energized without leaving the poolside at The Poolside Cafe. This convenient and casual spot offers a variety of light bites, including salads, wraps, and snacks, as well as a wide selection of refreshing beverages, from tropical cocktails to chilled juices. It's the perfect place to grab a quick and tasty meal or a cool drink while enjoying the sun and the pool.</p>
+                    <p><strong>Cuisine:</strong> Casual, Light Bites, Snacks, Beverages</p>
+                    <p><strong>Ambiance:</strong> Relaxed, Poolside, Informal</p>
+                    <p><strong>Dress Code:</strong> Casual</p>
+                    <p><strong>Reservations:</strong> No Reservations Required</p>
+
+            </div>
+
+            <div class="feature-box">
+
+                <h3>The Lobby Lounge - Sophisticated Cocktails and Ambiance</h3>
+
+                <p>Unwind and socialize in the elegant setting of The Lobby Lounge. This sophisticated lounge offers a curated selection of handcrafted cocktails, fine wines, and premium spirits. Enjoy light appetizers and small plates in a stylish atmosphere, often accompanied by live music in the evenings. The Lobby Lounge is the perfect place to start your evening, enjoy a nightcap, or simply relax and soak in the refined ambiance.</p>
+                    <p><strong>Cuisine:</strong> Beverages, Light Appetizers</p>
+                    <p><strong>Ambiance:</strong> Sophisticated, Relaxed, Live Music (select evenings)</p>
+                    <p><strong>Dress Code:</strong> Smart Casual</p>
+                    <p><strong>Reservations:</strong> No Reservations Required</p>
+            </div>
 
             
             </div> 
