--- a/Dining.html
+++ b/Dining.html
@@ -78,10 +78,16 @@
                     <p><strong>Dress Code:</strong> Smart Casual</p>
                     <p><strong>Reservations:</strong> No Reservations Required</p>
             </div>
+            </div>
+
+            <h2>Other Dining Options </h2>
+            <ul>
+                <li></li>
+            </ul>
 
             
-            </div> 
-        </section>
+            
+        s
     </main>
 
 
