finished other dining section

--- a/Dining.html
+++ b/Dining.html
@@ -82,12 +82,12 @@
 
             <h2>Other Dining Options </h2>
             <ul>
-                <li></li>
+                <li><strong>Room Service</strong> Enjoy the convenience of dining in the comfort and privacy of your own room with our extensive room service menu, available 24 hours a day.</li>
+                <li><strong>Buffet Breakfast:</strong> Start your day with a sumptuous buffet breakfast featuring a wide array of hot and cold dishes, fresh fruits, pastries, and more.</li>
+                <li><strong>Special Dietary Options:</strong> We are committed to accommodating your dietary needs. Please inform us of any allergies or dietary restrictions, and our chefs will be happy to prepare customized meals for you.</li>
             </ul>
 
-            
-            
-        s
+        </section>
     </main>
 
 
