added images to each resturant feature

--- a/Dining.html
+++ b/Dining.html
@@ -32,6 +32,7 @@
        
             <div class="features">
                 <div class="features-box">
+                    <img src="luigi-pozzoli-34Xicn82lY4-unsplash.jpg" alt="Beach-house-dining">
 
                     <h3>The Beach House - Fine Dining with Ocean Views</h3>
 
@@ -41,9 +42,12 @@
                 <p><strong>Dress Code:</strong> Smart Casual</p>
                 <p><strong>Reservations:</strong> Recommeded</p>
 
+
                 </div>
 
                 <div class="feature-box">
+
+                    <img src="pexels-valeriya-31235409.jpg" alt="Sand-bar-img">
 
                     <h3>The Sand Bar - Relaxed Beachfront Grill</h3>
 
@@ -57,6 +61,7 @@
                 </div>
 
             <div class="feature-box">
+                <img src="noz-thumb.jpg" alt="poolside-cafe-img">
 
                 <h3>The Poolside Cafe - Refreshments and Light Bites</h3>
 
@@ -69,6 +74,7 @@
             </div>
 
             <div class="feature-box">
+                <img src="pexels-valeriya-31235409.jpg" alt="lobby-lounge-img">
 
                 <h3>The Lobby Lounge - Sophisticated Cocktails and Ambiance</h3>
 
