fixed feature-box to say feature's'-box like their supposed to, started local excurstions section

--- a/Activities.html
+++ b/Activities.html
@@ -75,17 +75,17 @@
                     </ul>
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
                     <h4>Beach Volleyball</h4>
                     <p>Gather your friends and family for a friendly game of beach volleyball. (Complimentary)</p>
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
                     <h4>Fitness Center</h4>
                     <p>Maintain your fitness routine in our state-of-the-art fitness center. (24/7 access)</p>
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
                     <h4>Kids' Club Activities</h4>
                     <p>Let your children enjoy fun and engaging activities with our supervised Kids' Club. (Daily, various activities)</p>
                 </div>
@@ -95,6 +95,16 @@
             <h2>Local Excursions</h2>
 
             <h3>Explore the Natural Beauty</h3>
+
+            <div class="features">
+                <div class="features-box">
+                    <h4>Coral Reef Snorkeling Tour</h4>
+                    <p>Embark on a guided snorkeling tour to explore the vibrant coral reefs and encounter diverse marine life. (Half-day excursion, fees apply)</p>
+                </div>
+
+                <div class="fea"
+
+            </div>
             
             
 
