finished adding all "explore the natural beauty" section

--- a/Activities.html
+++ b/Activities.html
@@ -102,7 +102,24 @@
                     <p>Embark on a guided snorkeling tour to explore the vibrant coral reefs and encounter diverse marine life. (Half-day excursion, fees apply)</p>
                 </div>
 
-                <div class="fea"
+                <div class="features-box">
+
+                    <h4>Island Hopping Adventure</h4>
+                    <p>Discover the surrounding islands with a scenic boat tour. (Full-day excursion, fees apply)</p>
+
+                </div>
+
+                <div class="features-box">
+
+                    <h4>Rainforest Hike & Waterfall Visit</h4>
+                    <p>Immerse yourself in the lush rainforest and discover hidden waterfalls. (Half-day or full-day excursion, fees apply)</p>
+                </div>
+
+                <div class="features-box">
+
+                    <h4>Sunset Cruise</h4>
+                    <p>Enjoy a romantic sunset cruise along the coastline with breathtaking views. (Evening excursion, fees apply)</p>
+                </div>
 
             </div>
             
