--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="index.html">Home</a></a></li>
                     <li><a href="Rooms.html">Guest Rooms</a></li>
                     <li><a href="Dining.html">Dining</a></li>
-                    <li><a href="Activities">Experiences & Spa</a></li>
+                    <li><a href="Activities.html">Experiences & Spa</a></li>
                     <li><a href="contacts.html">Testimonials & Contacts</a></li>
                 </ul>
             </nav>
