finished the cultural section of info

--- a/Activities.html
+++ b/Activities.html
@@ -141,6 +141,11 @@
 
                 </div>
 
+                <div class="feature-box">
+                    <h4>Cultural Performance</h4>
+                    <p>Enjoy a captivating performance of traditional music and dance. (Evening event, fees may apply)</p>
+                </div>
+
             </div>
 
             
