added final activity section (Adventure and wildlife) info

--- a/Activities.html
+++ b/Activities.html
@@ -141,10 +141,34 @@
 
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
                     <h4>Cultural Performance</h4>
                     <p>Enjoy a captivating performance of traditional music and dance. (Evening event, fees may apply)</p>
                 </div>
+
+            </div>
+
+            <h3>Adventure & Wildlife</h3>
+            <div class="features">
+
+                <div class="features-box">
+
+                    <h4>Diving Excursions</h4>
+                    <p>Explore the underwater world with our certified diving instructors. (Various dive sites and packages available, fees apply)</p>
+                </div>
+
+                <div class="features-box">
+
+                    <h4>Wildlife Sanctuary Visit</h4>
+                    <p>Encounter exotic wildlife at a nearby sanctuary. (Half-day excursion, fees apply)</p>
+                </div>
+
+                <div class="features-box">
+
+                    <h4>Deep-Sea Fishing</h4>
+                    <p>Embark on a thrilling deep-sea fishing adventure. (Half-day or full-day excursion, fees apply)</p>
+                </div>
+
 
             </div>
 
@@ -162,6 +186,11 @@
                     <p>Indulge in our signature massage, designed to relax and rejuvenate your body using locally inspired techniques.</p>
                 </div>
         
+
+
+            </section>
+
+            </main>
          
 
 
