finished massage section, added spa html and connected it to my nav and another option. copy and pasted header and footer to contact page and spa page

--- a/Activities.html
+++ b/Activities.html
@@ -18,7 +18,8 @@
                     <li><a href="index.html">Home</a></a></li>
                     <li><a href="Rooms.html">Guest Rooms</a></li>
                     <li><a href="Dining.html">Dining</a></li>
-                    <li><a href="Activities.html">Experiences & Spa</a></li>
+                    <li><a href="spa.html">Spa</a></li>
+                    <li><a href="Activities.html">Experiences</a></li>
                     <li><a href="contacts.html">Testimonials & Contacts</a></li>
                 </ul>
             </nav>
@@ -188,11 +189,26 @@
                     <p>Targeted massage to relieve chronic muscle tension and pain. $180 / $260</p>
                 </div>
 
-                
+            <div class="feature-box">
+                    <h4>Hot Stone Massage (75 minutes)</h4>
+                    <p>Soothing massage using warm basalt stones to melt away stress and improve circulation. $220</p>
+                </div>
 
+                <div class="feature-box">
+                    <h4>Aromatherapy Massage (60 minutes)</h4>
+                    <p>Relaxing massage using essential oils to enhance mood and well-being. $190</p>
+                </div>
 
+                <div class="feature-box">
+                    <h4>Swedish Massage (60 minutes / 90 minutes)</h4>
+                    <p>A classic relaxation massage. $170 / $240</p>
+                </div>
 
-
+                <div class="feature-box">
+                    <h4>Couples Massage (60 Minutes)</h4>
+                    <p>Relax with a partner in a private room. $350 (per couple)</p>
+                </div>
+              </div>
         
 
 
