--- a/spa.html
+++ b/spa.html
@@ -26,6 +26,53 @@
         </div>
     </header>
 
+    <main>
+        <section>
+
+            <h2>The Serenity Sanctuary - Spa Services & Price List</h2>
+            <h3>Massages</h3>
+
+            <div class="features">
+              <div class="features-box">
+                  
+                  <h4>Shangri La Signature Massage (90 minutes)</h4>
+                  <p>A customized massage using a blend of techniques to release tension and promote deep relaxation. $250</p>
+              </div>
+
+              <div class="feature-box">
+                  <h4>Deep Tissue Massage (60 minutes / 90 minutes)</h4>
+                  <p>Targeted massage to relieve chronic muscle tension and pain. $180 / $260</p>
+              </div>
+
+          <div class="feature-box">
+                  <h4>Hot Stone Massage (75 minutes)</h4>
+                  <p>Soothing massage using warm basalt stones to melt away stress and improve circulation. $220</p>
+              </div>
+
+              <div class="feature-box">
+                  <h4>Aromatherapy Massage (60 minutes)</h4>
+                  <p>Relaxing massage using essential oils to enhance mood and well-being. $190</p>
+              </div>
+
+              <div class="feature-box">
+                  <h4>Swedish Massage (60 minutes / 90 minutes)</h4>
+                  <p>A classic relaxation massage. $170 / $240</p>
+              </div>
+
+              <div class="feature-box">
+                  <h4>Couples Massage (60 Minutes)</h4>
+                  <p>Relax with a partner in a private room. $350 (per couple)</p>
+              </div>
+            </div>
+      
+
+
+
+
+
+        </section>
+    </main>
+
 
 
 
