finished facials info section, Went over whole assignment and made sure all features say feature'S'-box

--- a/Dining.html
+++ b/Dining.html
@@ -46,7 +46,7 @@
 
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
 
                     <img src="pexels-valeriya-31235409.jpg" alt="Sand-bar-img">
 
@@ -61,7 +61,7 @@
 
                 </div>
 
-            <div class="feature-box">
+            <div class="features-box">
                 <img src="noz-thumb.jpg" alt="poolside-cafe-img">
 
                 <h3>The Poolside Cafe - Refreshments and Light Bites</h3>
@@ -74,7 +74,7 @@
 
             </div>
 
-            <div class="feature-box">
+            <div class="features-box">
                 <img src="pexels-valeriya-31235409.jpg" alt="lobby-lounge-img">
 
                 <h3>The Lobby Lounge - Sophisticated Cocktails and Ambiance</h3>
