completed body treatments info section

--- a/spa.html
+++ b/spa.html
@@ -92,9 +92,33 @@
                     <p>Cleansing facial designed to remove impurities and leave a fresh feeling. $160</p>
                 </div>
             </div>
+
+            <h2>Body Treatments</h2>
+
+            <div class="features">
+
+                <div class="features-box">
+                    <h4>Sea Salt Body Scrub (45 minutes)</h4>
+                    <p>Exfoliating treatment to remove dead skin cells and reveal smoother skin. $150</p>
+                </div>
+
+                <div class="features-box">
+
+                    <h4>Tropical Body Wrap (60 minutes)</h4>
+                    <p>Hydrating and nourishing body wrap using natural ingredients. $200</p>
+
+
+                </div>
+
+                <div class="features-box">
+
+                    <h4>Sun Relief Wrap (60 Minutes)</h4>
+                    <p>Soothing treatment to cool and hydrate skin after sun exposure. $170</p>
+                </div>
+            </div>
       
 
-            
+
 
 
 
