finished mani pedi section with prices.

--- a/spa.html
+++ b/spa.html
@@ -116,7 +116,33 @@
                     <p>Soothing treatment to cool and hydrate skin after sun exposure. $170</p>
                 </div>
             </div>
+
+            <h2>Manicures & Pedicures</h2>
+
+            <div class="features">
+                <div class="features-box">
+
+                    <h4>Shangri La Deluxe Manicure (60 minutes)</h4>
+                    <p>$90</p>
+                </div>
+
+                <div class="feature-box">
+                    <h4>Shangri La Deluxe Pedicure (75 minutes)</h4>
+                    <p>$110</p>
+                </div>
+
+                <div class="feature-box">
+                    <h4>Classic Manicure (45 minutes)</h4>
+                    <p>$70</p>
+                </div>
+
+                <div class="feature-box">
+                    <h4>Classic Pedicure (60 minutes)</h4>
+                    <p>$90</p>
+                </div>
+            </div>
       
+            
 
 
 
