started enhancements section

--- a/spa.html
+++ b/spa.html
@@ -126,23 +126,39 @@
                     <p>$90</p>
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
                     <h4>Shangri La Deluxe Pedicure (75 minutes)</h4>
                     <p>$110</p>
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
                     <h4>Classic Manicure (45 minutes)</h4>
                     <p>$70</p>
                 </div>
 
-                <div class="feature-box">
+                <div class="features-box">
                     <h4>Classic Pedicure (60 minutes)</h4>
                     <p>$90</p>
                 </div>
             </div>
       
-            
+            <h2>Enhancements (Add-ons)</h2>
+
+            <div class="features">
+
+                <div class="features-box">
+                    <h4>Scalp Massage (15 minutes)</h4>
+                    <p>$40</p>
+                </div>
+
+                <div class="features-box">
+
+                    <h4>Eye Treatment (15 minutes)</h4>
+                    <p>$35</p>
+                </div>
+
+
+            </div>
 
 
 
