finished last enhancements option

--- a/spa.html
+++ b/spa.html
@@ -157,7 +157,10 @@
                     <p>$35</p>
                 </div>
 
-
+                <div class="features-box">
+                    <h4>Foot Reflexology (15 minutes)</h4>
+                    <p>$40</p>
+                </div>
             </div>
 
 
