finished wellness programs, played with css to see if it was transfering properly

--- a/spa.html
+++ b/spa.html
@@ -163,6 +163,23 @@
                 </div>
             </div>
 
+            <h2>Wellness Programs</h2>
+
+            <div class="features">
+
+                <div class="features-box">
+                    <h4>Yoga Session (60 minutes)</h4>
+                    <p>$50 (Group), $120 (Private)</p>
+                </div>
+
+                <div class="features-box">
+                    <h4>Meditation Session (30 minutes)</h4>
+                    <p>$40 (Group), $100 (Private)</p>
+                </div>
+            </div>
+
+
+
 
 
 
