--- a/spa.html
+++ b/spa.html
@@ -179,12 +179,26 @@
             </div>
 
 
+            <h2>Booking & Infromation</h2>
 
+            <ul>
+                <li>Our concierge team is available to assist you with booking activities and excursions.</li>
+                <li>Please inquire about availability and pricing for specific activities.</li>
+                <li>Transportation to and from excursion locations can be arranged.</li>
+                <li>Advance bookings are recommended, especially during peak season.</li>
+            </ul>
 
+            <p>Create lasting memories at Shangri La Beach Resort with our diverse range of activities and excursions.</p>
 
+            <h3>Important Notes</h3>
 
-
-
+            <ul>
+                <li>Prices are subject to change without notice.</li>
+                <li>Reservations are highly recommended.</li>
+                <li>Please arrive 15 minutes prior to your scheduled appointment.</li>
+                <li>A 24-hour cancellation policy applies.</li>
+                <li>Gratuity not included.</li>
+            </ul>
 
         </section>
     </main>
