added reviews to testimonials & contacts and then added images throughout the activities, spa and contacts pages

--- a/Activities.html
+++ b/Activities.html
@@ -33,6 +33,8 @@
 
             <h2>On-Site Activities</h2>
 
+            <img src="beach-huts.jpg" alt="on-site-img">
+
 
             <h3>Relaxation & Rejuvenation</h3>
             <div class="features">
@@ -96,6 +98,8 @@
             
             <h2>Local Excursions</h2>
 
+            <img src="resort-drone.jpg" alt="local-excursions-img">
+
             <h3>Explore the Natural Beauty</h3>
 
             <div class="features">
@@ -126,7 +130,7 @@
             </div>
 
 
-            <h3>Cultural Experiences</h3>
+            <h2>Cultural Experiences</h2>
 
             <div class="features">
                 <div class="features-box">
@@ -149,7 +153,10 @@
 
             </div>
 
-            <h3>Adventure & Wildlife</h3>
+            <h2>Adventure & Wildlife</h2>
+
+            <img src="coral-reef.jpg" alt="wildlife-img">
+
             <div class="features">
 
                 <div class="features-box">
@@ -171,6 +178,17 @@
                 </div>
             </div>
 
+
+            <h2>Booking & Infromation</h2>
+
+            <ul>
+                <li>Our concierge team is available to assist you with booking activities and excursions.</li>
+                <li>Please inquire about availability and pricing for specific activities.</li>
+                <li>Transportation to and from excursion locations can be arranged.</li>
+                <li>Advance bookings are recommended, especially during peak season.</li>
+            </ul>
+
+            <p>Create lasting memories at Shangri La Beach Resort with our diverse range of activities and excursions.</p>
             </section>
 
             </main>
