--- a/spa.html
+++ b/spa.html
@@ -30,6 +30,8 @@
         <section>
 
             <h1>The Serenity Sanctuary - Spa Services & Price List</h1>
+
+            <img src="palm-tree.jpg" alt="title-img-spa">
             <h2>Massages</h2>
 
             <div class="features">
@@ -67,6 +69,9 @@
 
             <h2>Facials</h2>
 
+
+            <img src="pexels-john-tekeridis-21837-3212164.jpg" alt="facial-img">
+
             <div class="features">
                 <div class="features-box">
 
@@ -94,6 +99,8 @@
             </div>
 
             <h2>Body Treatments</h2>
+
+            <img src="pexels-polina-tankilevitch-3736520.jpg" alt="body-treatment-img">
 
             <div class="features">
 
@@ -141,6 +148,8 @@
                     <p>$90</p>
                 </div>
             </div>
+
+            <img src="homepage/pexels-olly-3757657.jpg" alt="enhancement-img">
       
             <h2>Enhancements (Add-ons)</h2>
 
@@ -179,18 +188,7 @@
             </div>
 
 
-            <h2>Booking & Infromation</h2>
-
-            <ul>
-                <li>Our concierge team is available to assist you with booking activities and excursions.</li>
-                <li>Please inquire about availability and pricing for specific activities.</li>
-                <li>Transportation to and from excursion locations can be arranged.</li>
-                <li>Advance bookings are recommended, especially during peak season.</li>
-            </ul>
-
-            <p>Create lasting memories at Shangri La Beach Resort with our diverse range of activities and excursions.</p>
-
-            <h3>Important Notes</h3>
+            <h2>Important Notes</h2>
 
             <ul>
                 <li>Prices are subject to change without notice.</li>
