--- a/Rooms.html
+++ b/Rooms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shanri- La Beach Resort - Home</title>
+    <title>Shanrgi- La Beach Resort - Home</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
@@ -15,7 +15,7 @@
             <div class="weather" id="weather-display">Loading Weather...</div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Rooms.html">Guest Rooms</a></li>
                     <li><a href="Dining.html">Dining</a></li>
                     <li><a href="spa.html">Spa</a></li>
