added color to favicon so i added proper link to all pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shangri- La Beach Resort - Home</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.svg">
 </head>
 <body>
     <header>
@@ -48,7 +48,7 @@
                     <img src="homepage/pexels-olly-3757657.jpg" alt="Spa">
                     <h3>World-Class Spa</h3>
                     <p>Rejuvenate your mind and body at our spa.</p>
-                    <a href="Activities.html">Check Out Now!</a>
+                    <a href="spa.html">Check Out Now!</a>
 
                 </div>
                 <div class="features-box">
